Created new routes for user
