# routes/reservation.js
@@ -1,27 +1,12 @@
 const express = require("express");
 const router = express.Router();
 const reservationCtrl = require("../controller/reservationController.js");
-const { auth, checkRole } = require("../middleware/auth");
+const { auth } = require("../middleware/auth");
 
-router.get("/", auth, reservationCtrl.getAllReservation);
-router.post(
-  "/",
-  auth,
-  checkRole(["admin", "manager"]),
-  reservationCtrl.createOneReservation
-);
+router.get("/", auth, reservationCtrl.getAllReservations);
+router.post("/", auth, reservationCtrl.createOneReservation);
 router.get("/:id", auth, reservationCtrl.getOneReservation);
-router.put(
-  "/:id",
-  auth,
-  checkRole(["admin", "manager"]),
-  reservationCtrl.updateOneReservation
-);
-router.delete(
-  "/:id",
-  auth,
-  checkRole(["admin", "manager"]),
-  reservationCtrl.deleteOneReservation
-);
+router.put("/:id", auth, reservationCtrl.updateOneReservation);
+router.delete("/:id", auth, reservationCtrl.deleteOneReservation);
 
 module.exports = router;
